--- a/ExcelDataSerializerUI/App.axaml
+++ b/ExcelDataSerializerUI/App.axaml
@@ -8,7 +8,13 @@
     <Application.DataTemplates>
         <local:ViewLocator/>
     </Application.DataTemplates>
-  
+     <Application.Resources>
+         <ResourceDictionary>
+             <ResourceDictionary.MergedDictionaries>
+                 <ResourceInclude Source="avares://LoadingIndicators.Avalonia/LoadingIndicators.axaml" />
+             </ResourceDictionary.MergedDictionaries>
+         </ResourceDictionary>
+     </Application.Resources>
     <Application.Styles>
         <FluentTheme />
     </Application.Styles>
