- 로그 타입 Error 추가 - 파싱 중 발생하는 오류 메세지를 Error 로그로 출력 (로그 파일은 둘 다 포함) - 파싱 에러시 변환 즉시 중단

--- a/ExcelDataSerializerUI/Views/MainWindow.axaml
+++ b/ExcelDataSerializerUI/Views/MainWindow.axaml
@@ -49,6 +49,7 @@
                 <li:LoadingIndicator IsActive="{Binding IsBusy}" Mode="Arc" Height="10" SpeedRatio="1.2" />
             </DockPanel>
         </Border>
+        <Label HorizontalAlignment="Center">INFO</Label>
         <Border BorderBrush="Black"
                 BorderThickness="2"
                 CornerRadius="3"
@@ -58,7 +59,21 @@
                           VerticalScrollBarVisibility="Auto"
                           VerticalAlignment="Stretch"
                           MaxHeight="500">
-                <SelectableTextBlock Text="{Binding Log}"></SelectableTextBlock>
+                    <SelectableTextBlock Text="{Binding Log}"></SelectableTextBlock>
+            </ScrollViewer>
+        </Border>
+
+        <Label HorizontalAlignment="Center">ERROR</Label>
+        <Border BorderBrush="Black"
+                BorderThickness="2"
+                CornerRadius="3"
+                Margin="10" Padding="10"
+                VerticalAlignment="Stretch">
+            <ScrollViewer AllowAutoHide="True"
+                          VerticalScrollBarVisibility="Auto"
+                          VerticalAlignment="Stretch"
+                          MaxHeight="500">
+                    <SelectableTextBlock Text="{Binding ErrorLog}"></SelectableTextBlock>
             </ScrollViewer>
         </Border>
     </StackPanel>
